GNOME Bugzilla – Bug 780769
encodebin: fix list leak when requesting a new pad
Last modified: 2017-03-31 15:20:19 UTC
Created attachment 349059 [details] [review] encodebin: fix list leak when requesting a new pad
commit 9c8e700b91f586c050754d38684433be4427467f Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk> Date: Fri Mar 31 15:59:19 2017 +0100 encodebin: fix list leak when requesting a new pad https://bugzilla.gnome.org/show_bug.cgi?id=780769