encodebin: fix list leak when requesting a new pad

https://bugzilla.gnome.org/show_bug.cgi?id=780769